# Kiln

./: .claude  .coderabbit.yaml  .coveragerc  .cursorrules  .gitignore  .worktreeinclude  AGENTS.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  checks.sh  conftest.py  custom_models_v2.md  hooks_mcp.yaml  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  socket.yml  tessl.json
app/desktop/: README.md  WinInnoSetup.iss  build_desktop_app.sh  custom_tray.py  desktop.py  desktop_server.py  dev_server.py  linux_installer.sh  log_config.py  pyproject.toml  test_desktop.py  test_log_config.py  test_start_background_syncs.py
app/desktop/docs/: sentry.md
app/desktop/git_sync/: README.md  background_sync.py  clone.py  commit_message.py  config.py  conftest.py  decorators.py  errors.py  git_sync_api.py  git_sync_manager.py  middleware.py  oauth.py  registry.py  save_context.py  test_background_sync.py  test_clone.py  test_commit_message.py  test_config.py  test_decorators.py  test_end_to_end.py  test_git_sync_api.py  test_git_sync_manager.py  test_middleware.py  test_oauth.py  test_registry.py  test_save_context.py  test_sse_invariants.py
app/desktop/git_sync/integration_tests/: conftest.py  test_background_sync.py  test_conflicts.py  test_crash_recovery.py  test_decorators.py  test_file_operations.py  test_fixtures.py  test_freshness.py  test_happy_path.py  test_locking.py  test_middleware_routing.py  test_network_failure.py  test_no_write_lock_batch.py  test_rollback.py
app/desktop/studio_server/: _sentry_config.py  agent_api.py  ai_sdk_types.py  batch_plan_api.py  batch_plan_task.py  budget_middleware.py  chat_api.py  chat_stream_api.py  code_tool_api.py  copilot_api.py  copilot_models.py  data_gen_api.py  dev_tools.py  doc_skill_api.py  doc_skill_pipeline.py  doc_skill_skill_builder.py  eval_api.py  eval_builder_api.py  eval_jobs_api.py  finetune_api.py  gepa_job_api.py  import_api.py  judge_feedback_batch_api.py  judge_job_api.py  multiturn_sdg_api.py  prompt_api.py  prompt_optimization_job_api.py  provider_api.py  rag_jobs_api.py  rate_limits_api.py  repair_api.py  run_config_api.py  settings_api.py  setup_certs.py  skill_api.py  spec_api.py  test_agent_api.py  test_ai_sdk_types.py  test_batch_plan_api.py  test_budget_middleware.py  (+39 more)
app/desktop/studio_server/api_client/: kiln_server_client.py  test_kiln_server_client.py
app/desktop/studio_server/api_client/kiln_ai_server_client/: README.md  __init__.py
app/desktop/studio_server/api_client/kiln_ai_server_client/models/: __init__.py  answer_option.py  answer_option_with_selection.py  api_key_verification_result.py  audio.py  batch_plan_input.py  batch_plan_output.py  body_start_gepa_job_v1_jobs_gepa_job_start_post.py  body_start_gepa_job_v1_jobs_gepa_job_start_post_token_budget.py  body_start_prompt_optimization_job_v1_jobs_prompt_optimization_job_start_post.py  body_start_sample_job_v1_jobs_sample_job_start_post.py  build_claim_evidence_input.py  build_claim_evidence_output.py  change.py  chat_completion_assistant_message_param_wrapper.py  chat_completion_content_part_image_param.py  chat_completion_content_part_input_audio_param.py  chat_completion_content_part_refusal_param.py  chat_completion_content_part_text_param.py  chat_completion_developer_message_param.py  chat_completion_function_message_param.py  chat_completion_message_function_tool_call_param.py  chat_completion_system_message_param.py  chat_completion_tool_message_param_wrapper.py  chat_completion_user_message_param.py  chat_request.py  chat_session_list_item.py  chat_snapshot.py  check_entitlements_v1_check_entitlements_get_response_check_entitlements_v1_check_entitlements_get.py  check_evals_request.py  check_evals_request_eval_configs_item.py  check_evals_request_evals_item.py  check_model_supported_response.py  check_response.py  check_run_config_request.py  check_run_config_request_run_config.py  (+140 more)
app/desktop/studio_server/api_models/: copilot_models.py  eval_builder_models.py  questions_models.py  test_copilot_models.py  test_questions_models.py
app/desktop/studio_server/chat/: __init__.py  conftest.py  constants.py  debug_log.py  helpers.py  orchestration.py  routes.py  sse_parser.py  stream_session.py  test_debug_log.py  test_fakes.py  test_integration.py  test_iter_upstream_round.py  test_orchestration.py  test_routes.py  test_sse_parser.py  test_stream_session.py  test_tool_metadata.py  tool_approval.py  tool_metadata.py
app/desktop/studio_server/chat/auto/: __init__.py  api.py  events.py  models.py  registry.py  runner.py  sse.py  test_api.py  test_fakes.py  test_iter_upstream_round.py  test_registry.py  test_runner.py
app/desktop/studio_server/chat/runtime/: __init__.py  api.py  bus.py  engine.py  golden_scenarios.py  interceptors.py  models.py  sse.py  supervisor.py  test_api.py  test_bus.py  test_engine.py  test_golden_protocol.py  test_interceptors.py  test_supervisor.py
app/desktop/studio_server/chat/subagents/: api.py  events.py  models.py  orchestration.py  registry.py  runner.py  sse.py  test_api.py  test_orchestration.py  test_registry.py  test_runner.py
app/desktop/studio_server/jobs/: api.py  error_log.py  events.py  models.py  registry.py  test_api.py  test_error_log.py  test_events.py  test_registry.py
app/desktop/studio_server/jobs/workers/: eval.py  finetune.py  judge_feedback_batch.py  noop.py  rag.py  test_eval.py  test_finetune.py  test_judge_feedback_batch.py  test_rag.py
app/desktop/studio_server/synthetic_user/: __init__.py  client.py  drive_loop.py  runner.py  test_client.py  test_drive_loop.py  test_runner.py
app/desktop/studio_server/test_chat/: helpers.py  test_chat_sessions_proxy.py  test_continuation.py  test_event_parser.py  test_execute_tool.py  test_integration.py  test_remote_tool_roundtrip.py  test_stream_session_error.py  test_streaming.py  test_tool_approval.py
app/desktop/studio_server/utils/: copilot_utils.py  eval_builder_utils.py  response_utils.py  test_copilot_utils.py  test_response_utils.py
app/desktop/util/: resource_limits.py  spec_creation.py  spec_utils.py
(+2553 files in other folders)
