[project]
name = "kiln-root"
version = "0.1.0"
description = "uv workspace project for Kiln AI. See kiln-ai package on pypi for our library (libs/core)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "certifi>=2024.8.30",
    "kiln-ai==0.5.3",
    "kiln-server",
    "kiln-studio-desktop",
]

[dependency-groups]
dev = [
    "diff-cover>=9.6.0",
    "isort>=5.13.2",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "pytest-xdist>=3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.15.0",
    "watchfiles>=1.1.0",
    "scalar-fastapi>=1.4.3",
    "ty>=0.0.2",
]

[tool.uv]
override-dependencies = [
  "starlette>=0.49.1",   # forces a safe minimum for the transitive dep
]

[tool.uv.workspace]
members = ["libs/core", "libs/server", "app/desktop"]

[tool.uv.sources]
kiln-server = { workspace = true }
kiln-studio-desktop = { workspace = true }
kiln-ai = { workspace = true }

[tool.ruff]
exclude = []

[tool.ty.src]
exclude = ["**/test_*.py", "app/desktop/build/**", "app/web_ui/**", "**/.venv", "**/kiln_ai_server_client/**"]

[tool.ty.rules]
invalid-key = "ignore"

[tool.ruff.lint]
# I is import sorting
# F401 is unused imports
# RUF is ruff rules. In particular 012+008 are mutable defaults (important)
# FAST is FastAPI related linting
extend-select = ["I","F401","RUF","FAST","TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.cast" = { msg = "Avoid using typing.cast; prefer safer alternatives." }

[tool.pytest.ini_options]
 addopts="-n auto"


