[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiln-studio-desktop"
version = "0.1.0"
description = "The Kiln Desktop App. Download from https://getkiln.ai"
requires-python = ">=3.10"
dependencies = [
    "kiln-server",
    "pillow>=11.0.0",
    "pystray>=0.19.5",
    "pyinstaller==6.11.1",
    "scipy>=1.15.2",
]

# We don't really want to build a wheel for desktop, it's a pyinstaller project. This is a minimal build to take care of errors.
[tool.hatch.build.targets.wheel]
only-include = ["__init__.py"]

[tool.uv.sources]
kiln-server = { workspace = true }
